fix(docs): tags groupement of swagger endpoints
